[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0.29.6"
ego-tree = "0.6.2"
ngram_iter = { git = "https://github.com/gabriel-araujjo/rust_ngram_iter.git", branch = "fat-middle" }
scraper = "0.14.0"
